Added Edit,Create and List for Assets

--- a/Web/Views/Standard/Index.cshtml
+++ b/Web/Views/Standard/Index.cshtml
@@ -7,7 +7,8 @@
 
     <p>
         @Html.ActionLink("Create New", "Create")
-        @Html.ActionLink("Create New User","User/Create")
+        @Html.ActionLink("Create New User", "User/Create")
+        <a href="/Asset/Create"> Create New Asset</a>
         <a href="/User/Create"> CreateNew User hyperlink</a>
     </p>
     <table class="table-bordered">
