--- a/Web/Views/Asset/Delete.cshtml
+++ b/Web/Views/Asset/Delete.cshtml
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Asset</h4>
+    <h4>AssetViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -28,6 +28,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.InitCount)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.InitCount)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
 
@@ -41,8 +49,12 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Delete" class="btn btn-default" /> 
+            
         </div>
     }
+</div>
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
 </div>
