--- a/Web/Views/Facility/FacilityList.cshtml
+++ b/Web/Views/Facility/FacilityList.cshtml
@@ -9,6 +9,7 @@
         @Html.ActionLink("Create New", "Create", "Standard")
         @Html.ActionLink("Create New User", "Create", "User")
         @Html.ActionLink("Create New Asset", "Create", "Resource")
+        @Html.ActionLink("View Report", "ViewReport", "Facility")
     </p>
     <table class="table-bordered">
         <tr>
