--- a/Web/Views/Resource/Edit.cshtml
+++ b/Web/Views/Resource/Edit.cshtml
@@ -41,6 +41,14 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.CurrentCount, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.CurrentCount, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CurrentCount, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
