Added login functionality

--- a/Web/Views/Facility/Edit.cshtml
+++ b/Web/Views/Facility/Edit.cshtml
@@ -6,7 +6,7 @@
 <div class="tray_main">
     <h2>Edit</h2>
 
-    @using (Html.BeginForm("Edit", "Standard", FormMethod.Post))
+    @using (Html.BeginForm("Edit", "Facility", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
 
