--- a/Web/Views/Resource/Edit.cshtml
+++ b/Web/Views/Resource/Edit.cshtml
@@ -25,6 +25,15 @@
     </div>
 
     <div class="form-group">
+        @Html.Label("Assigned Facility", htmlAttributes: new { @class = "control-label col-md-2" })
+        
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Facility.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
@@ -68,7 +77,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ListOfAllFacilities, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.FacilityId, new SelectList(Model.ListOfAllFacilities, "Id", "Name"), new { @id = "CompanyListBox", @size = 10 })
+            @Html.DropDownListFor(model => model.Facility, new SelectList(Model.ListOfAllFacilities, "Id", "Name"), new { @id = "CompanyListBox", @size = 10 })
         </div>
     </div>
 
