--- a/Web/Views/Facility/Create.cshtml
+++ b/Web/Views/Facility/Create.cshtml
@@ -4,7 +4,6 @@
     ViewBag.Title = "Create";
 }
 <div class="tray_main">
-    <h2>Create</h2>
 
 
     @using (Html.BeginForm())
@@ -12,7 +11,7 @@
         @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Facility</h4>
+        <h2>Create Facility</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
