--- a/Web/Views/Facility/FacilityList.cshtml
+++ b/Web/Views/Facility/FacilityList.cshtml
@@ -3,8 +3,11 @@
     ViewBag.Title = "Facilities";
 }
 <div class="tray_main">
-    <h2>Facility</h2>
-
+    <h2>Active Facility List</h2>
+    <span style="word-spacing: 30px">
+        @Html.ActionLink("InactiveFacilities", "InactiveFacilityList", "Facility")
+        @Html.ActionLink("ActiveFacilities", "FacilityList", "Facility")
+    </span>
     <table class="table-bordered">
         <tr>
             <th>
@@ -22,19 +25,19 @@
 
         @foreach (var item in Model.Facilities)
         {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Landmark)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Landmark)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
         }
     </table>
     <br />
