--- a/Web/Views/Resource/Edit.cshtml
+++ b/Web/Views/Resource/Edit.cshtml
@@ -93,7 +93,7 @@
             return true;
         }
         else {
-            alert("Select The Facility You Want to Assign to the Resource
+            alert("Select The Facility You Want to Assign to the Resource")
             return false;
         }
     }
