--- a/Web/Views/User/Create.cshtml
+++ b/Web/Views/User/Create.cshtml
@@ -37,18 +37,21 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model =>model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control", required = "true" } })
-            @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
+            <div id="Role" >
+            Admin    @Html.RadioButtonFor(model => model.Role,"Admin")
+             User    @Html.RadioButtonFor(model => model.Role, "User", new { @checked = "checked" })
+                @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" , required = "true" })
+            </div>
         </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.IsActive)
+            <div class="radio">
+                @Html.CheckBoxFor(model => model.IsActive)
                 @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -63,7 +66,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default"onclick="return check()" />
+            <input type="submit" value="Create" class="btn btn-default"onclick="return check()"/>
         </div>
     </div>
 
@@ -85,7 +88,7 @@
     }
 </script>
 <div>
-    @Html.ActionLink("Back to UserList", "UserList", "User")
+    @Html.ActionLink("Back to UserList", "UserList","User")
 </div>
 
 @section Scripts {
