--- a/Web/Views/User/Edit.cshtml
+++ b/Web/Views/User/Edit.cshtml
@@ -40,8 +40,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control", required = "true" } })
-                @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
+                <div id="Role">
+                    Admin    @Html.RadioButtonFor(model => model.Role, "Admin")
+                    User    @Html.RadioButtonFor(model => model.Role, "User")
+                    @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger", required = "true" })
+                </div>
             </div>
         </div>
         <div class="form-group">
