--- a/Web/Views/User/UserList.cshtml
+++ b/Web/Views/User/UserList.cshtml
@@ -4,8 +4,11 @@
     ViewBag.Title = "Users";
 }
 
-<h2>UserList</h2>
-
+<h2>Active Users UserList</h2>
+<span style="word-spacing: 30px">
+    @Html.ActionLink("InactiveUsers", "InactiveUserList", "User")
+    @Html.ActionLink("ActiveUsers", "UserList", "User")
+</span>
 <table class="table">
     <tr>
 
@@ -27,31 +30,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model.Users)
-{
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Role)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Password)
-        </td>
-        <td>
-            @for (var i = 0; i < item.ListOfFacilitiesAssigned.Count(); i++)
-            {
-                @Html.DisplayFor(modelItem => item.ListOfFacilitiesAssigned.ElementAt(i).Name)
-                <br />
-            }
-        </td>
-        <td>
-            @Html.ActionLink("Edit/Deactivate User", "Edit", new { id = item.Id,  })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model.Users)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Role)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsActive)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Password)
+            </td>
+            <td>
+                @for (var i = 0; i < item.ListOfFacilitiesAssigned.Count(); i++)
+                {
+                    @Html.DisplayFor(modelItem => item.ListOfFacilitiesAssigned.ElementAt(i).Name)
+                    <br />
+                }
+            </td>
+            <td>
+                @Html.ActionLink("Edit/Deactivate User", "Edit", new { id = item.Id, })
+            </td>
+        </tr>
+    }
 </table>
