--- a/Web/Views/Standard/UserHome.cshtml
+++ b/Web/Views/Standard/UserHome.cshtml
@@ -5,19 +5,19 @@
 <div class="tray_main">
     <h2>Facility</h2>
     <table class="table-bordered">
-        @Html.ActionLink("Back To Home", "FacilityList", "Facility")
-        
-        </p>
-        @*<table class="table-bordered">
+        @Html.ActionLink("Back To Home", "UserHome", "Standard")
+        @HttpContext.Current.Session["firstName"].ToString()
+
+        <table class="table-bordered">
             @foreach (var Facility in Model.Facilities)
             {
                 <tr>
                     <td>
-                        @Html.ActionLink(Facility.Name, "Edit", "Facility", new { id = Facility.Id }) |
+                        @Html.ActionLink(Facility.Name, "MonitorFacility/" + Facility.Id)
                     </td>
                 </tr>
             }
         </table>
-        </table>*@
+    </table>
         <br />
 </div>
