--- a/Web/Views/Facility/Details.cshtml
+++ b/Web/Views/Facility/Details.cshtml
@@ -65,6 +65,6 @@
     </div>
     <p>
         @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "FacilityList")
     </p>
 </div>
