--- a/Web/Views/Facility/FacilityList.cshtml
+++ b/Web/Views/Facility/FacilityList.cshtml
@@ -33,9 +33,8 @@
                     @Html.DisplayFor(modelItem => item.Landmark)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Edit/Deactivate Facility", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
                 </td>
             </tr>
         }
